--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.pythonPath": "C:\\Users\\jensa\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe"
+  "python.pythonPath": "C:\\Users\\jensa\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe",
+  "python.formatting.provider": "black"
 }
